--- a/ormconfig.json
+++ b/ormconfig.json
@@ -4,12 +4,12 @@
   "port": 5433,
   "username": "postgres",
   "password": "docker",
-  "database": "mussum",
+  "database": "proj_orm",
   "entities": [
     "src/models/**/*.ts"
  ],
  "migrations": [
-  "src/migrations/**/*.ts"
+  "src/database/migrations/**/*.ts"
 ],
  "cli":{
   "migrationsDir": [
