--- a/ormconfig.json
+++ b/ormconfig.json
@@ -3,7 +3,7 @@
   "host": "localhost",
   "port": 5433,
   "username": "postgres",
-  "password": "docker",
+  "password": "postgres",
   "database": "proj_orm",
   "entities": [
     "src/models/**/*.ts"
