--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend-desafio",
+  "name": "typeorm-ts-heroku-pg",
   "version": "1.0.0",
   "main": "app.ts",
   "license": "MIT",
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@types/node": "^14.0.5",
+    "dotenv": "^9.0.0",
     "express": "^4.17.1",
     "pg": "^8.2.1",
     "reflect-metadata": "^0.1.13",
