fix: migrationsDir path

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -13,7 +13,7 @@
 ],
  "cli":{
   "migrationsDir": [
-    "src/migrations/"
+    "src/database/migrations/"
   ],
   "entitiesDir": "src/models"
   }
